[package]
name = "unicode_clusters"
version = "0.1.0"
edition = "2018"
authors = ["fitz <fitz@figmentengine.com"]

license = "MIT"
keywords = ["text", "unicode", "grapheme", "character"]
exclude = [ "target/*", "Cargo.lock" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
