[package]
name = "unicode_clusters"
version = "0.1.1"
edition = "2018"
authors = ["fitz <fitz@figmentengine.com"]

repository = "https://github.com/FigmentEngine/unicode_clusters"

license = "MIT"
keywords = ["text", "unicode", "grapheme", "character"]
exclude = [ "target/*", "Cargo.lock" ]
description = """
This crate provides variable width unicode characters as single items, allowing for array like indexing etc.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
